<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.upec.androidtemplate20192020.UI.MainActivity">
    <item
        android:id="@+id/ic_info"
        android:orderInCategory="100"
        android:title="@string/title_info"
        android:icon="@drawable/ic_info_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/refresh"
        android:orderInCategory="100"
        android:title="@string/title_refresh"
        android:icon="@drawable/ic_settings_backup_restore_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/join"
        android:orderInCategory="100"
        android:title="@string/title_join"
        app:showAsAction="never"/>
    <item
        android:id="@+id/host"
        android:orderInCategory="100"
        android:title="@string/title_host"
        app:showAsAction="never"/>
    <item
        android:id="@+id/item_pseudo"
        android:orderInCategory="100"
        android:title="@string/title_pseudo"
        app:showAsAction="never"/>
    <item
        android:id="@+id/disconnect"
        android:orderInCategory="100"
        android:title="@string/title_Disonnect"
        app:showAsAction="never"/>
</menu>
