<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="175dp"
    android:background="@android:color/white"
    android:gravity="center">





        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entrez_votre_pseudo"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/pseudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/ex_mypseudo"
            android:inputType="text"
            android:text="@string/mypseudo" tools:targetApi="o"/>

        <Button
            android:id="@+id/pseudo_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ok" />



</LinearLayout>